[package]
name = "planetz"
version = "0.1.0"
authors = ["Dmytro Kovalchuk <dimasmith@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piston = "0.49.0"
piston2d-graphics = "0.36.0"
pistoncore-glutin_window = "0.63.0"
piston2d-opengl_graphics = "0.72.0"
hecs = "0.2.12"
rusttype = "0.9.1"
serde = "1.0"

[dependencies.vecmath]
version = "1.0.0"

[dependencies.interpolation]
version = "0.2.0"

[dependencies.image]
version = "^0.23.4"

[dependencies.assets_manager]
version = "0.2.2"
features = ["ron"]
